multi-cluster-scale/manifests/polaris/validatingwebhookconfiguration-polaris-validate-webhook.yaml
# Source: polaris/templates/validate-webhook.configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: polaris-validate-webhook
  annotations:
    cert-manager.io/inject-ca-from: polaris/polaris-cert
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: polaris-webhook
      namespace: polaris
      path: /validate
      port: 443
  failurePolicy: Fail
  matchPolicy: Exact
  name: polaris.fairwinds.com
  namespaceSelector:
    
    matchExpressions:
    - key: control-plane
      operator: DoesNotExist
  objectSelector:
    
    {}
  rules:
  - apiGroups:
    - apps
    apiVersions:
    - v1
    - v1beta1
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - daemonsets
    - deployments
    - statefulsets
    scope: Namespaced
  - apiGroups:
    - batch
    apiVersions:
    - v1
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - jobs
    - cronjobs
    scope: Namespaced
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
    - replicationcontrollers
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
